--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
   },
   "author": "colorlib",
   "license": "CC-BY-3.0",
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1"
-  },
+  "devDependencies": {},
   "dependencies": {
     "bootstrap": "^4.3.1",
     "counterup": "^1.0.2",
     "elegant-icons": "0.0.1",
     "font-awesome": "^4.7.0",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "imagesloaded": "^4.1.4",
     "isotope-layout": "^3.0.6",
     "jarallax": "^1.10.6",
