--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "confer-conference-event-html-template",
+  "name": "psych-sci",
   "version": "1.0.0",
   "description": "Psychedelic Science Summit 2020",
   "main": "index.js",
-  "author": "colorlib",
-  "license": "CC-BY-3.0",
+  "author": "tlacy1000",
   "devDependencies": {},
   "dependencies": {
     "bootstrap": "^4.3.1",
